- security and stability fixes
- Fixed a bug where prf may return a wrong string len (for ex : in the previous versions newStringWithformat("%02x%02x%02x%02x%02x%02x",101,117,104,113,103,100) may not return the entire string) 
- Fixed a bug in xml.c 
- Fixed a bug in device_inject.c (inspired from the dmazar's patch)


- security and stability fixes
- Removed useless codes in efistring modules
- Fixed bugs related to device_inject.c
- Fixed bugs related to device_tree.c
- Fixed bugs related to hfs.c
- Fixed a bug in the booterlog introduced in the previous version
- Fixed a bug in randomTheme intoduced in the previous version
- Added LoginToLion Cub Devices (credit to Enzo)


- security and stability fixes
- Improved Xcode4.3+ and clang compatibility
- Fixed a bug in device_inject.c
- Updated uthash, utarrey, etc ... to v1.9.6 
- Replaced arc4random by the freebsd version (found in darwin's libc) 
(also Removed others random generators since the pseudo-random generator now work perfectly )
- Implemented gettimeofday taken from libpayload
- finaly back to safe_malloc
- Sync'd the cpu legacy method to the trunk

- Implemented the Runtime Bundles Modules
- Updated nvidia and ati device id
- Small security fixes

- Stability fixes
- Added mountain lion auto_installer compatibility
- Changed md5c.c to the Xnu's md5.c

- Added a dirty workaround to selectBootVolume (still need more investigations to find out what happening exactly during the bvchain construction, and how the h... the loop can stop with gcc)

- Improved Xcode4.3+ support 

- Sync'd LoginToLion with the last Enzo's update (want more about LoginToLion ? please follow or participate to this thread : http://forum.voodooprojects.org/index.php/topic,2125.0.html)
- fixed some bugs
- Added an option to change the acpi detection method (only for acpi 64 users) 
- Updated amlsgn with more cocoa 

- Many security and bug fixes and improvements