@@ -71,8 +71,8 @@ MAXBOOTSIZE = 458240
 
 CFLAGS += -DSAFE_MALLOC 
 
-GFLAGS += -DNO_MULTIBOOT_SUPPORT 
-#OBJS += mboot.o
+#GFLAGS += -DNO_MULTIBOOT_SUPPORT 
+OBJS += mboot.o
 
 # CFLAGS += -DBOOT_HELPER_SUPPORT # +992 bytes
 
